--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,15 @@
 # VIM backup files
 *~
 
+# Intermediate automake files
+*.in
+
+# automake output
+aclocal.m4
+autom4te.cache/
+compile
+configure
+depcomp
+install-sh
+missing
+
