--- a/Makefile.am
+++ b/Makefile.am
@@ -2,4 +2,5 @@
 noinst_PROGRAMS = empty
 
 empty_SOURCES = empty.cpp
-
+empty_CXXFLAGS = $(AM_CXXFLAGS) $(X11_CFLAGS)
+empty_LDFLAGS = $(X11_LDFLAGS)
