explain WHY largefile support is important

--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,7 @@ AC_PREFIX_DEFAULT(/usr/local)
 
 # largefile support.
 # NTS: creation of config.h means you must include config.h to get _FILE_OFFSET_BITS=64 or whatever your platform needs.
+#      Failure to do so will prevent that code from accessing files larger than 2GB on 32-bit systems (where off_t is 32-bit wide)
 AC_SYS_LARGEFILE
 
 AC_SUBST(CFLAGS)
